# joatss_backend

./: Dockerfile  README.md  manage.py  pyproject.toml
.github/workflows/: build_and_push_dockerhub.yaml
joatss/: asgi.py  settings.py  urls.py  wsgi.py
joatssapp/: apps.py  dtos.py  exceptions.py  models.py  processors.py  repositories.py  serializers.py  services.py  urls.py  utils.py  views.py
joatssapp/migrations/: 0001_initial.py
